--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -21,6 +21,7 @@
                                 <a class="nav-link" href="#data-acquisition">数据获取</a>
                                 <a class="nav-link active" href="#backtest">回测</a>
                                 <a class="nav-link" href="#results">历史结果</a>
+                                <a class="nav-link" href="/signal_analysis">信号分析</a>
                             </div>
                             <a href="https://github.com/zhaoxusun/stock-quant" target="_blank" class="btn btn-outline-light btn-sm github-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
