--- a/frontend/templates/strategy_code.html
+++ b/frontend/templates/strategy_code.html
@@ -26,7 +26,7 @@
         .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
             border-bottom: 2px solid #0d6efd;
             color: #0d6efd;
-            background-color: #fff;
+            background-color: #0d6efd;
         }
         .main-tabs .nav-item.show .nav-link, .main-tabs .nav-link.active {
             background-color: #0d6efd;
